@@ -132,6 +132,9 @@ believed them :-).
 Adam Williamson
 Pointing me toward yet another compatibility bug.
 
+_BahdKo_ <bahdko@erols.com>
+Pointing me to the original Doom sound compatibility issues.
+
 Everyone who contributed indirectly to MBF and Boom and Doom; see the
 respective documentation files.
 
